--- a/amardaan/static/css/dashboard.css
+++ b/amardaan/static/css/dashboard.css
@@ -92,18 +92,34 @@ ul  {
     display: grid;
     grid-template-columns: 40% 60%;
 }
-/* Add the other styles you have here */
 
 .in-col1 {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 50vh;
+    height: 55vh;
     width: 80%;
     background-color: #ffffff;
     border-radius: 10px;
     padding: 20px;
+}
+.center{
+    display: flex;
+    justify-content: center;
+}
+.in-col2 {
+    height: 55vh;
+    width: 100%;
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 40px;
+}
+.grid-col-2{
+    padding-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
 }
 
 .profile-container {
@@ -111,6 +127,12 @@ ul  {
     flex-direction: column;
     align-items: center;
     gap: 10px;
+}
+.header{
+    display: block;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile-picture {
@@ -143,4 +165,42 @@ ul  {
     padding-left: 20px;
     grid-template-columns: 20% 80%;
     grid-template-rows: 1fr 1fr;
+}
+.password-strength {
+    display: block;
+    
+    font-size: 0.85rem;
+}
+
+.password-strength .strength.weak {
+    color: #ff6961;
+    font-weight: 800;
+    
+}
+
+.password-strength .strength.medium {
+    font-weight: 800;
+
+    color: #f5ce6e; /* Medium color */
+}
+
+.password-strength .strength.strong {
+    color: #77dd77; /* Strong color */
+    font-weight: 800;
+
+}
+.password-input-container {
+    position: relative;
+}
+
+.password-toggle{
+    position: absolute;
+    top: 50%;
+    right: -35px;
+    transform: translateY(-50%);
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 0.85rem;
+    color: var(--secondary-color);
 }
