--- a/amardaan/templates/dashboard.html
+++ b/amardaan/templates/dashboard.html
@@ -52,9 +52,13 @@
                             <button style="border: 0px; border-radius: 10px; background-color: red;color:white;"
                                 id="update-profile-button">Update New Photo</button>
                             <input type="file" id="upload-input" accept=".jpg, .jpeg, .png" style="display: none;">
-                            <strong style="color:blueviolet"><small>Member Since: {{ user.date.strftime('%d %B %Y')
-                                    }}</small></strong>
+                            
                         </div>
+                        <div class="about-me">
+                            <p>A passionate donator who aims to solve peoples problem as much as he can!</p>
+                        </div>
+                        <strong style="color:blueviolet"><small>Member Since: {{ user.date.strftime('%d %B %Y')}}</small></strong>
+
                     </div>
                     <div class="in-col2">
                         <div class="header">
