--- a/amardaan/templates/otp_page.html
+++ b/amardaan/templates/otp_page.html
@@ -17,8 +17,17 @@
                 <span>A code has been sent to</span>
                 <small>{{ user.email[:3] }}{{ '*' * (user.email|length - 7) }}{{ user.email[-10:] }}</small>
             </div>
-            <div id="otp" class="inputs d-flex flex-row justify-content-center mt-2"> <input class="m-2 text-center form-control rounded" type="text" id="first" maxlength="1" /> <input class="m-2 text-center form-control rounded" type="text" id="second" maxlength="1" /> <input class="m-2 text-center form-control rounded" type="text" id="third" maxlength="1" /> <input class="m-2 text-center form-control rounded" type="text" id="fourth" maxlength="1" /> <input class="m-2 text-center form-control rounded" type="text" id="fifth" maxlength="1" /> <input class="m-2 text-center form-control rounded" type="text" id="sixth" maxlength="1" /> </div>
-            <div class="mt-4"> <button class="btn btn-danger px-4 validate">Validate</button> </div>
+          <form action="{{url_for('views.otp_verification')}}" method="POST">
+            <div id="otp" class="inputs d-flex flex-row justify-content-center mt-2"> 
+              <input class="m-2 text-center form-control rounded" type="text" name="first" id="first" maxlength="1" /> 
+              <input class="m-2 text-center form-control rounded" type="text" name="second" id="second" maxlength="1" /> 
+              <input class="m-2 text-center form-control rounded" type="text" name="third" id="third" maxlength="1" /> 
+              <input class="m-2 text-center form-control rounded" type="text" name="fourth" id="fourth" maxlength="1" /> 
+              <input class="m-2 text-center form-control rounded" type="text" name="fifth" id="fifth" maxlength="1" /> 
+              <input class="m-2 text-center form-control rounded" type="text" name="sixth" id="sixth" maxlength="1" /> 
+            </div>
+            <div class="mt-4"> <button type="submit" class="btn btn-danger px-4 validate">Validate</button> </div>
+          </form>
         </div>
     </div>
 </div>
