--- a/amardaan/static/css/dashboard.css
+++ b/amardaan/static/css/dashboard.css
@@ -55,7 +55,7 @@ li:hover{
 
 }
 .col2{
-    background-color: #f5f5fd;
+    background-image: url('../images/steptodown.com676640.jpg');
     border-radius: 1rem;
 }
 .col1-center{
