--- a/amardaan/templates/otp_page.html
+++ b/amardaan/templates/otp_page.html
@@ -17,7 +17,7 @@
                 <span>A code has been sent to</span>
                 <small>{{ user.email[:3] }}{{ '*' * (user.email|length - 7) }}{{ user.email[-10:] }}</small>
             </div>
-          <form action="{{url_for('views.otp_verification')}}" method="POST">
+          <form action="{{url_for('views.otp_verified', otp=otp)}}" method="POST">
             <div id="otp" class="inputs d-flex flex-row justify-content-center mt-2"> 
               <input class="m-2 text-center form-control rounded" type="text" name="first" id="first" maxlength="1" /> 
               <input class="m-2 text-center form-control rounded" type="text" name="second" id="second" maxlength="1" /> 
