--- a/AmarDaan/static/css/style.css
+++ b/AmarDaan/static/css/style.css
@@ -10,12 +10,13 @@ body{
     height: 200px;
   }
   .beautiful-header {
-    background-color: #f5f5f5;
+    background-image: url('../images/headerbg.jpg');
+    background-size: cover; /* Show the full image without cropping */
+    background-repeat: no-repeat; /* Prevent the image from repeating */
+    background-position: center center; /* Center the background image */
     padding: 60px 0;
-    
     text-align: center;
-  }
-  
+}
   .header-content {
     display: flex;
     justify-content: space-between;
