--- a/amardaan/templates/statistics.html
+++ b/amardaan/templates/statistics.html
@@ -7,17 +7,68 @@
     <div class="sta-container">
         <div class="sta-col1">
             </div>
-
         <div class="sta-col2">
             <div class="sta-inside">
                 <h5>Your Donations</h5>
                 <h3 style="font-weight: 600; padding-top: 10px;">৳ 2,25,000.00 <small style="color: grey; font-size: small;">(TK)</small> </h3>
-                <small style="font-size: .8rem; padding-top: 10px;color: blueviolet">From Jan 01, 2022 to Jan 31, 2022</small>
+                <small style="font-size: .8rem; padding-top: 10px;color: blueviolet">From Jan 01, 2023 to Aug 31, 2023</small>
                 <strong></strong>
                 <div class="button-class">
                         <button class="btn btn-primary"><i class="bi bi-cash-stack"></i> Donate</button>
                         <button class="btn btn-dark"><i class="bi bi-download"></i> Extract</button>
                 </div>
+            </div>
+        </div>
+        <div class="sta-row2">
+            <div class="container">
+                <div class="table-container">
+                    <div class="table-wrapper">
+                        <table class="table">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Date</th>
+                                    <th scope="col">Campaign Name</th>
+                                    <th scope="col">Amount</th>
+                                    <th scope="col">Type</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>2023-08-18</td>
+                                    <td>Zarin Mostafa</td>
+                                    <td>$100.00</td>
+                                    <td>Donate</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>2023-08-19</td>
+                                    <td>Md. Mamun</td>
+                                    <td>$75.00</td>
+                                    <td>Donate</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>2023-08-20</td>
+                                    <td>Soha</td>
+                                    <td>$50.00</td>
+                                    <td>Donate</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="pagination">
+                        <button class="pagination-button"><i class="bi bi-arrow-bar-left"></i> Previous</button>
+                        <span>Page 1</span>
+                        <button class="pagination-button">Next <i class="bi bi-arrow-bar-right"></i></button>
+                    </div>
+                </div>
+            </div>
+            
+            </div>
+            <div class="sta-row-col">
+                
             </div>
         </div>
     </div>
