--- a/amardaan/static/css/sta_container.css
+++ b/amardaan/static/css/sta_container.css
@@ -9,9 +9,11 @@
     display: grid;
     width: 100%;
     grid-template-columns: 70% 30%;
+    grid-template-rows: 1fr 1fr;
     gap: 20px;
     
 }
+
 .sta-col1{
     background-color: rgb(253, 253, 251);
     border-radius: 10px;
@@ -21,6 +23,14 @@
 .sta-col2{
     background-color: rgb(253, 253, 251);
     border-radius: 10px;
+    height: 250px;
+}
+.sta-row2{
+    height: 280px;
+    background-color: rgb(253, 253, 251);
+    border-radius: 10px;
+    width: 100%;
+
 }
 .sta-inside{
     padding: 30px;
@@ -33,4 +43,268 @@
     grid-template-columns: 1fr 1fr;
     gap: 30px;
     text-align: center;
+}
+.table-container {
+    padding: 20px;
+}
+
+.table-wrapper {
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.table {
+    width: 100%;
+    border-collapse: collapse;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #f8f9fa;
+}
+
+.table thead th:nth-child(odd) {
+    background: linear-gradient(to right, #6d20e9, #6c42e9); /* Purple to Blue */
+    color: white;
+    font-weight: 600;
+    text-align: left;
+    padding: 10px;
+}
+
+.table thead th:nth-child(even) {
+    background: linear-gradient(to right, #6c42e9, #6d20e9); /* Blue to Purple */
+    color: white;
+    font-weight: 600;
+    text-align: left;
+    padding: 10px;
+}
+
+.table tbody td {
+    padding: 10px;
+}
+
+.table tbody tr:not(:last-child) td {
+    border-bottom: 1px solid #dee2e6;
+}
+
+.pagination {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.pagination-button {
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 10px;
+}
+.sta-row-col{
+    width: 100%;
+    height: 280px;
+    background-color: white;
+    border-radius: 10px;
+}
+.pie-chart {
+    height: 220px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spending-box {
+    position: relative;
+}
+
+.overall-spending {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 32%;
+    left: 50%;
+    text-align: center;
+}
+
+.overall-spending > h4 {
+    color: #596780;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 150%;
+}
+
+.overall-spending > span {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 150%;
+}
+
+.pie-chart__labels {
+    display: flex;
+    flex-direction: column;
+    gap: 17px;
+    margin-top: 40px;
+}
+
+.pie-chart__labels-item {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 150%;
+}
+
+.pie-chart__labels-item, .label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.label {
+    gap: 12px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    color: #596780;
+} 
+
+.label__color {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+}
+
+.first {
+    background: #EB7CA6;
+}
+
+.second {
+    background: #FFACC8;
+}
+
+.third {
+    background: #CC6FF8;
+}
+
+.fourth {
+    background: #7C5CFC;
+}
+
+.fifth {
+    background: #5CAFFC;
+}
+
+.sixth {
+    background: #A1A9FE;
+}
+
+@media (max-width: 1300px) {
+    .bottom-container {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .bottom-container__left, .bottom-container__right {
+        width: 100%;
+    }
+    
+  .btn {
+    width: 45%;
+  }
+}
+
+@media(max-width: 900px) {
+  .top-container {
+        gap: 24px;
+    }
+    .total-box {
+        flex-direction: column;
+    }
+
+    .total-box__left {
+        margin-right: 0;
+        border-right: none;
+        border-bottom: 1px solid #F3F5F7;
+        padding-bottom: 24px;
+        margin-bottom: 24px;
+    }
+
+    .up-arrow {
+        margin-right: 0;
+    }
+}
+
+@media(max-width: 780px) {
+    .top-container {
+        flex-direction: column;
+        gap: 18px;
+    }
+
+    .user-nav {
+        justify-content: space-between;
+    }
+
+    .section-header {
+        font-size: 18px;
+    }
+
+    table, tbody, th, td, tr { 
+		display: block; 
+	}
+
+    tr > th {
+        position: absolute;
+		top: -9999px;
+		left: -9999px;
+    }
+
+    td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #F3F5F7; 
+		position: relative;
+		padding-left: 50%; 
+	}
+
+    td::before {
+        position: absolute;
+        left: 0;
+    }
+
+    tr > td {
+        text-align: end;
+    }
+
+    tr > td:first-child {
+        justify-content: end;
+    }
+
+    td:nth-of-type(1):before { content: "Transactions"; }
+    td:nth-of-type(2):before { content: "Date"; }
+    td:nth-of-type(3):before { content: "Amount"; }
+    td:nth-of-type(4):before { content: "Status"; }
+
+    .total-box p, .box p {
+        font-size: 14px;
+    }
+
+    .pie-chart__labels-item {
+        font-size: 16px;
+    }
+}
+
+@media(max-width: 600px) {
+    .sidebar {
+        display: none;
+    }
+    
+    .year-selector {
+      gap: 12px;
+    }
+    
+    .button-box {
+      flex-direction: column;
+      gap: 20px;
+      margin-top: 28px;
+    }
+    
+    .btn {
+        width: 100%;
+        font-size: 15px;
+    }
 }
