--- a/amardaan/static/css/sta_container.css
+++ b/amardaan/static/css/sta_container.css
@@ -1,310 +1,345 @@
-.sta-aligner{
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");
+*{
+    font-family: 'Plus Jakarta Sans', sans-serif;
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html, body {
+    height: 100%;
+}
+body {
+    font-family: 'Bai Jamjuree', sans-serif;
+    height: 100vh;
+}
+.container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-.sta-container{
-    padding: 50px;
-    display: grid;
-    width: 100%;
-    grid-template-columns: 70% 30%;
-    grid-template-rows: 1fr 1fr;
-    gap: 20px;
-    
+    justify-content: flex-start;
+    height: 100%;
 }
 
-.sta-col1{
-    background-color: rgb(253, 253, 251);
-    border-radius: 10px;
-    height: 250px;
-}
-
-.sta-col2{
-    background-color: rgb(253, 253, 251);
-    border-radius: 10px;
-    height: 250px;
-}
-.sta-row2{
-    height: 280px;
-    background-color: rgb(253, 253, 251);
-    border-radius: 10px;
-    width: 100%;
-
-}
-.sta-inside{
-    padding: 30px;
-}
-.button-class{
-    padding: 40px 0px 0px 0px;
-    display: grid;
-    height: 40px;
-    width: 100%;
-    grid-template-columns: 1fr 1fr;
-    gap: 30px;
-    text-align: center;
-}
-.table-container {
-    padding: 20px;
-}
-
-.table-wrapper {
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.table {
-    width: 100%;
-    border-collapse: collapse;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #f8f9fa;
-}
-
-.table thead th:nth-child(odd) {
-    background: linear-gradient(to right, #6d20e9, #6c42e9); /* Purple to Blue */
-    color: white;
-    font-weight: 600;
-    text-align: left;
-    padding: 10px;
-}
-
-.table thead th:nth-child(even) {
-    background: linear-gradient(to right, #6c42e9, #6d20e9); /* Blue to Purple */
-    color: white;
-    font-weight: 600;
-    text-align: left;
-    padding: 10px;
-}
-
-.table tbody td {
-    padding: 10px;
-}
-
-.table tbody tr:not(:last-child) td {
-    border-bottom: 1px solid #dee2e6;
-}
-
-.pagination {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.pagination-button {
-    padding: 5px 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 10px;
-}
-.sta-row-col{
-    width: 100%;
-    height: 280px;
-    background-color: white;
-    border-radius: 10px;
-}
-.pie-chart {
-    height: 220px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.spending-box {
-    position: relative;
-}
-
-.overall-spending {
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 32%;
-    left: 50%;
-    text-align: center;
-}
-
-.overall-spending > h4 {
-    color: #596780;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 150%;
-}
-
-.overall-spending > span {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 150%;
-}
-
-.pie-chart__labels {
+.sidebar {
+    width: 240px;
     display: flex;
     flex-direction: column;
-    gap: 17px;
-    margin-top: 40px;
+    flex-shrink: 0;
+    justify-content: space-between;
+    border-right: 1px solid #F3F5F7;
+    padding: 0 16px;
+    overflow: auto;
 }
 
-.pie-chart__labels-item {
-    font-weight: 600;
+.sidebar__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 40px 0 56px -30px;
+}
+
+.sidebar__logo-header {
+    margin-left: 14px;
+}
+
+.side-nav {
+    display: flex;
+    flex-direction: column;
+}
+
+.side-nav__header {
     font-size: 14px;
-    line-height: 150%;
+    line-height: 21px;
+    color: #90A3BF;
+    padding-bottom: 10px;
+    display: inline-block;
 }
 
-.pie-chart__labels-item, .label {
+.side-nav__header, .side-nav__item > span {
+    letter-spacing: -2%;
+    font-weight: 500;
+}
+
+.side-nav__item {
+    list-style: none;
+    color: #596780;
+    display: flex;
+    align-items: center;
+    gap: 14px;
+    padding: 14px 0 14px 16px;    
+    border-radius: 10px;
+    transition: all .4s;
+    cursor: pointer;
+    white-space: nowrap;
+}
+
+.side-nav__item > svg {
+  flex-shrink: 0;
+}
+
+.side-nav__item.last-item {
+    margin-bottom: 32px;
+}
+
+.side-nav__item:not(:last-child) {
+    margin-bottom: 4px;
+}
+
+.side-nav__item:hover,  .side-nav__item-active {
+    background-color: #7C5CFC;
+    color: white;
+}
+.main-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    overflow: auto;
+}
+
+/* -------------- TOP CONTAINER -------------- */
+.top-container {
+    border-bottom: 1px solid #F3F5F7;
+    padding: 18px 32px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.label {
-    gap: 12px;
+/* -------------- SEARCH -------------- */
+.search {
+    display: flex;
+    align-items: center;
+    padding: 11px 0 11px 24px;
+    max-width: 492px;
+    width: 100%;
+    border: 1px solid #C3D4E9;
+    border-radius: 70px;
+    gap: 26px;
+    background: #FFFFFF;
+    opacity: 0.8;
+}
+
+.search__input {
+    border: none;
+    outline: none;
+    width: calc(100% - 78px);
+}
+
+/* -------------- USER NAV -------------- */
+.user-nav, .user-info {
+    display: flex;
+    align-items: center;
+}
+
+.user-name {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -2%;
+    margin: 0 37px 0 12px;
+}
+
+.user-image {
+    height: 44px;
+    width: 44px;
+}
+
+/* -------------- NOTIFICATION -------------- */
+.notification {
+    border: 1px solid #C3D4E9;
+    background-color: transparent;
+    position: relative;
+    margin-right: 32px;
+    height: 44px;
+    width: 44px;
+    border-radius: 50%;
+    padding: 10px;
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.notification::after {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
+    top: -2px;
+    right: 3px;
+}
+/* Bottom Container */
+.bottom-container {
+    display: flex;
+    gap: 24px;
+    padding: 32px;
+    background-color: #F3F5F7;
+}
+
+.box {
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 24px;
+    margin-bottom: 24px; /*fix later*/
+}
+
+.bottom-container__left {
+    width: 70%;
+}
+
+.bottom-container__right {
+    width: 30%;
+}
+
+.spending-statistics {
+    max-height: 338px;
+}
+.bar-chart {
+    max-height: 223px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+/* header */
+.header-container {
+    color: #1A202C;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    
+    font-weight: 600;
+    letter-spacing: -2%;
+}
+
+.section-header {
+    line-height: 24px;
+    font-size: 16px;
+}
+
+.header-container span {
+    line-height: 21px;
+    font-size: 14px;
+}
+
+.year-selector {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.total-box {
+    display: flex;
+}
+
+.total-box__left {
+    border-right: 1px solid #F0F0F0;
+    flex: 1;
+}
+
+.total-box__right {
+    flex: 1;
+}
+
+.up-arrow, .total-box__left {
+    margin-right: 24px;
+}
+
+.price {
+    line-height: 150%;
+    margin-bottom: 14px;
+}
+
+.price-currency {
+    line-height: 21px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #90A3BF;
+    margin-left: 8px;
+}
+
+.total-box p, .box p {
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: -0.02em;
+    color: #90A3BF;
+}
+
+.percentage-increase {
+    color: #7FB519;
+}
+
+.percentage-decrease {
+    color: #FF4423;
+}
+
+.date-selector {
+    padding: 10px 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #C3D4E9;
+    border-radius: 6px;
+}
+
+.date-selector span {
     font-weight: 600;
     font-size: 12px;
     line-height: 15px;
-    color: #596780;
-} 
+    margin-left: 8px;
+}
 
-.label__color {
-    width: 12px;
-    height: 12px;
+.transaction-box {
+   margin-bottom: 0; 
+}
+
+.transaction-history {
+    width: 100%;
+    text-align: left;
+    vertical-align: middle;
+    margin-top: 24px;
+}
+tr > th {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 150%;
+    color: #90A3BF;
+    padding-bottom: 24px;
+}
+
+tr > td {
+    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: -2%;
+    padding: 8px 0;
+}
+
+tr > td:first-child {
+    display: flex;
+    align-items: center;
+    gap: 9px;
+}
+
+.status {
+    margin-right: 8px;
+}
+.img-container {
+    position: relative;
+    width: 100%;
+    max-width: 36px; /* Set the maximum width for the image */
+    border-radius: 50%; /* Make the container circular */
+    overflow: hidden;
+}
+
+.img-container img {
+    object-fit: cover;
+    border: 3px solid #c2ccdb;
+    width: 100%;
+    max-height: 36px;
     border-radius: 50%;
-}
-
-.first {
-    background: #EB7CA6;
-}
-
-.second {
-    background: #FFACC8;
-}
-
-.third {
-    background: #CC6FF8;
-}
-
-.fourth {
-    background: #7C5CFC;
-}
-
-.fifth {
-    background: #5CAFFC;
-}
-
-.sixth {
-    background: #A1A9FE;
-}
-
-@media (max-width: 1300px) {
-    .bottom-container {
-        flex-direction: column;
-        height: auto;
-    }
-
-    .bottom-container__left, .bottom-container__right {
-        width: 100%;
-    }
-    
-  .btn {
-    width: 45%;
-  }
-}
-
-@media(max-width: 900px) {
-  .top-container {
-        gap: 24px;
-    }
-    .total-box {
-        flex-direction: column;
-    }
-
-    .total-box__left {
-        margin-right: 0;
-        border-right: none;
-        border-bottom: 1px solid #F3F5F7;
-        padding-bottom: 24px;
-        margin-bottom: 24px;
-    }
-
-    .up-arrow {
-        margin-right: 0;
-    }
-}
-
-@media(max-width: 780px) {
-    .top-container {
-        flex-direction: column;
-        gap: 18px;
-    }
-
-    .user-nav {
-        justify-content: space-between;
-    }
-
-    .section-header {
-        font-size: 18px;
-    }
-
-    table, tbody, th, td, tr { 
-		display: block; 
-	}
-
-    tr > th {
-        position: absolute;
-		top: -9999px;
-		left: -9999px;
-    }
-
-    td { 
-		/* Behave  like a "row" */
-		border: none;
-		border-bottom: 1px solid #F3F5F7; 
-		position: relative;
-		padding-left: 50%; 
-	}
-
-    td::before {
-        position: absolute;
-        left: 0;
-    }
-
-    tr > td {
-        text-align: end;
-    }
-
-    tr > td:first-child {
-        justify-content: end;
-    }
-
-    td:nth-of-type(1):before { content: "Transactions"; }
-    td:nth-of-type(2):before { content: "Date"; }
-    td:nth-of-type(3):before { content: "Amount"; }
-    td:nth-of-type(4):before { content: "Status"; }
-
-    .total-box p, .box p {
-        font-size: 14px;
-    }
-
-    .pie-chart__labels-item {
-        font-size: 16px;
-    }
-}
-
-@media(max-width: 600px) {
-    .sidebar {
-        display: none;
-    }
-    
-    .year-selector {
-      gap: 12px;
-    }
-    
-    .button-box {
-      flex-direction: column;
-      gap: 20px;
-      margin-top: 28px;
-    }
-    
-    .btn {
-        width: 100%;
-        font-size: 15px;
-    }
+    height: 100%;
 }
