--- a/amardaan/static/css/dashboard.css
+++ b/amardaan/static/css/dashboard.css
@@ -1,6 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 *{
-    font-family: 'Bai Jamjuree', sans-serif;
+    font-family: 'Plus Jakarta Sans', sans-serif;
 
 }
 .icon {
