--- a/amardaan/static/css/sta_container.css
+++ b/amardaan/static/css/sta_container.css
@@ -14,7 +14,7 @@ body {
     font-family: 'Bai Jamjuree', sans-serif;
     height: 100vh;
 }
-.container {
+.main-nav-container1 {
     display: flex;
     justify-content: flex-start;
     height: 100%;
