Fixed a broken link!

--- a/amardaan/templates/otp_page.html
+++ b/amardaan/templates/otp_page.html
@@ -12,7 +12,7 @@
     <div class="position-relative">
         <div class="card p-2 text-center">
             <img style="width: 150px;margin: 20px" src="{{url_for('static', filename='images/logo.png')}}">
-            <img src="../static/images/otp.avif" style="width: 200px">
+            <img src="{{url_for('static', filename='images/otp.avif')}}" style="width: 200px">
             <h6>Please enter the one time password <br> to verify your account</h6>
             <div>
                 <span>A code has been sent to</span>
